Fix dropdown width overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -43,7 +43,6 @@ body {
     border-radius: 0.8em;
     margin: 1em;
     padding: 2em;
-    width: 600px;
     flex: 1;
     border: 3px solid #4B4642;
 }
@@ -56,7 +55,6 @@ body {
     border: 3px solid #4B4642;
     border-radius: 0.8em;
     flex: 1;
-    width: 600px;
 }
 
 // Accordion
